package contest_submit;
message ContestSubmit {
  required int32 id = 1;
  required int64 timestamp = 2;
}
